--- a/src/Home.css
+++ b/src/Home.css
@@ -5,8 +5,11 @@
 }
 
 .home > h1 {
-    padding: 5px 100%;
-    background-color:  #4caf50;
+  display: flex;
+  align-self: stretch;
+  justify-content: center;
+  flex: stretch;
+  background-color: #4caf50;
 }
 .home__container {
   display: flex;
